<resources>
    <string name="version">ver 1.1053</string>
    <string name="font_defalut">13dp</string>
    <string name="font_small">12dp</string>
    <string name="font_big">15dp</string>
    <string name="font_title">16dp</string>
    <string-array name="pion_tips">
        <item>합리적인 금융사 경쟁입찰 방식</item>
        <item>높은 한도의 주택담보대출, LTV 80% ↑</item>
        <item>매달 15일은 매니저 수당 받는날</item>
        <item>다양한 채널을 통한 고객모집(링크, QR코드 등)</item>
        <item>한눈에 볼 수 있는 실시간 대출진행상황</item>
    </string-array>
    <string name="ex">예시</string>
    <string name="lincense_apply">매니저 라이선스 발급</string>
    <string name="regBizManager">이벤트 기간 중 비즈매니저를 추천인으로 등록하여 매니저 수당이 0.1% 증가했습니다</string>
    <string name="missionPassed">이벤트를 달성하여 매니저 수당이 0.1% 증가했습니다</string>
    <string name="app_name">더파이온\n매니저</string>
    <string name="app_name_oneLine">The PION Manager</string>
    <string name="com_name">The PION</string>
    <string name="kakao_app_key">0b1f28aebf7f7f5a33c43dc0413d0058</string>
    <string name="kakaolink_host">kakaolink</string>
    <string name="app_name_korea">THE PION</string>
    <string name="intro_thepion_manager">The PION 매니저란?</string>
    <string name="tv_term_1">[필수] 서비스 이용약관 동의</string>
    <string name="tv_term_2">[필수] 개인정보 수집 및 이용안내에 동의</string>
    <string name="tv_term_3">[필수] 개인정보의 제3자 제공에 동의</string>
    <string name="tv_term_4">[선택] 광고성 정보수신에 동의</string>
    <string name="intro_mw">매니저란?</string>
    <string name="intro_mw_content">The PION 매니저 번호를 발급 받아 대출 중개를 알선 할 수 있는권한을 부여 받고 중개 수수료를 받을 수 있는 사람을 말합니다.</string>
    <string name="intro_mn">매니저 번호란?</string>
    <string name="intro_ma">The PION App에서는</string>
    <string name="intro_ma_content">The PION 고객관리 시스템을 사용하기 위한 일종의 면허 번호로 매니저의 업무 편리성을 돕고 고객과의 체결을 통해 안전한 수수료를 지급받도록 도움을 줍니다.</string>
    <string name="button_register">매니저 회원가입</string>
    <string name="register_page_intro">필수 및 선택정보 전체를 동의하게 되며, 개별적으로도 선택하실 수 있습니다. 필수항목에 대해 동의를 거부하시는 경우에는 서비스는 이용이 불가능합니다.</string>
    <string name="register_page_1">이용약관, 개인정보 수집 및 이용, 개인정보의 제3자 제공, 광고성 알림 수신에 모두 동의합니다.</string>
    <string name="register_page_2">이용약관 동의 (필수)</string>
    <string name="register_page_3">개인정보 수집 및 이용 동의 (필수)</string>
    <string name="register_page_4">광고성 알림 수신 동의 (선택)</string>
    <string name="register_thirdPeople">개인정보의 제3자 제공 동의 (필수)</string>
    <string name="register_page_top">매니저 회원가입    ① - ② - ③</string>
    <string name="register_page_allview"><u>전체보기</u></string>
    <string name="next">다 음</string>
    <string name="m2">m2 기준</string>
    <string name="close">닫기</string>
    <string name="search">검 색</string>
    <string name="termsofuse">이용약관</string>
    <string name="personalinformation">개인정보 수징 및 이용</string>
    <string name="adalerts">광고성 알림</string>
    <string name="register">회원가입</string>
    <string name="register_next">다음</string>
    <string name="forever_close">다시 보지 않기</string>
    <string name="id">아이디(이메일)</string>
    <string name="password">비밀번호(4자리 이상)</string>
    <string name="password_confirm">보기</string>
    <string name="email">이메일</string>
    <string name="registration"><u>회원가입</u></string>
    <string name="recommendation">추천매니저 ID(E-mail 형식)</string>
    <string name="confirm">회원가입</string>
    <string name="dob">생년월일 8자리 ex)19800101</string>
    <string name="phone">연락처 ( " - " 없이 숫자만)</string>
    <string name="phoneNum">연락처</string>
    <string name="name">이름</string>
    <string name="error_text_id">이메일 형식의 아이디를 입력해주세요</string>
    <string name="error_text_recommendation">이메일 형식의 아이디를 입력해주세요</string>
    <string name="error_text_recommendation_noID">추천인 아이디가 존재하지 않습니다</string>
    <string name="error_text_pw">비밀번호를 입력해주세요(4자리 이상)</string>
    <string name="error_text_name">이름을 입력해주세요</string>
    <string name="error_text_phone">연락처를 입력해주세요</string>
    <string name="error_text_bank_owner">예금주명을 입력해주세요</string>
    <string name="error_text_account">계좌번호를 입력해주세요</string>
    <string name="error_text_dob">생년월일 8자리를 입력해주세요</string>
    <string name="register_complete_1">매니저 회원가입 완료</string>
    <string name="register_complete_2">축하 드립니다!</string>
    <string name="register_complete_3">매니저 회원가입이 완료되었습니다.</string>
    <string name="register_complete_4">이제 매니저 번호를 발급 받으면 0000와 대출자를 연결하여 중개 수수료를 받을 수 있습니다.</string>
    <string name="register_complete_5">매니저 번호 발급</string>
    <string name="register_registration_num_1">매니저 라이선스 신청    ①</string>
    <string name="register_registration_num_2">매니저 라이선스 신청    ① - ②</string>
    <string name="register_registration_num_3">매니저 라이선스 신청    ① - ② - ③</string>
    <string name="register_identification_1">매니저 회원가입   ① - ② - ③ </string>
    <string name="register_identification_2">신분증을 등록해주세요</string>
    <string name="register_identification_3">신분증의 모든 정보가 잘리지 않고 잘 보여야 합니다. 신분증이 유효하지 않은 경우 면허발급이 되지 않습니다.</string>
    <string name="register_identification_4">앨범</string>
    <string name="register_identification_5">카메라</string>
    <string name="register_page_manager_number_application">라이선스 신청 완료</string>
    <string name="register_page_bank_account_1">수수료 입금 계좌를 등록해주세요</string>
    <string name="register_page_bank_account_number">계좌번호 - 없이 기재</string>
    <string name="register_page_bank_account_name">예금주명</string>
    <string name="register_manager_apply_complete">라이선스 신청이 완료되었습니다.</string>
    <string name="register_manager_apply_complete_2">소정의 심사를 통해 라이선스 발급유무에 대해 알림을 드립니다.\n 잠시만 기다려주세요.</string>
    <string name="register_manager_apply_complete_3">매니저 수당 알아보기</string>
    <string name="my_page">My Page</string>
    <string name="my_page_name">님의 마이페이지입니다.</string>
    <string name="introduce_frag_1_top">더파이온 매니저는\n고객과 금융을 연결합니다.</string>
    <string name="introduce_frag_1_bottom">경쟁입찰 방식을 통해 고객이 금융사로부터 직접 입찰받고 선택할 수 있도록 합니다.</string>
    <string name="introduce_frag_2_top">더파이온 매니저는\n매달 15일 매니저 수당을 받습니다.</string>
    <string name="introduce_frag_2_bottom">고객의 대출이 완료되면 매니저 수당을 받게됩니다.\n매니저 수당이란 고객의 수수료와는 무관하며 더파이온에서 별도로 지급하는 수당입니다.</string>
    <string name="introduce_frag_3_top">더파이온 매니저는\n다양한 채널로 고객을 모집합니다.</string>
    <string name="introduce_frag_3_bottom">일반 고객은 채널 없이 경쟁입찰 등록이 불가능합니다.\n채널을 통해 접속한 고객은 매니저와 자동으로 체결되고 매니저는 안전한 수익을 보장받습니다.</string>
    <string name="refManagerAddForBizPartner_1">현재 추천인으로 등록하신 ID는 "비즈파트너"입니다. </string>
    <string name="refManagerAddForBizPartner_2">비즈파트너를 추천인으로 등록시 고객님의 매니저 수당은 더파이온에서 고객님에게 직접 지급되지 않고, 비즈파트너에게 일괄지급되며 수당에 관한 일체의 사항은 비즈파트너에게 일임합니다.\n\n\n동의하시겠습니까? </string>
    <string name="bt_logout"><u>로그아웃</u></string>
    <string name="tv_logout">로그아웃 하시겠습니까?</string>
    <string name="tv_pml">PML</string>
    <string name="tv_pickmanagerlicense_2">The PION Manager License</string>
    <string name="tv_myInfo">개인정보</string>
    <string name="tv_teamInfo">팀원리스트</string>
    <string name="tv_customerInfo">고객</string>
    <string name="tv_activity_story">활동내역</string>
    <string name="tv_notice_board">게시판</string>
    <string name="tv_analystic">통계</string>
    <string name="tv_faq" >FAQ</string>
    <string name="tv_setting">설정</string>
    <string name="tv_termsOfService">이용약관</string>
    <string name="tv_privacy">개인정보</string>
    <string name="tv_appInfo">앱정보</string>
    <string name="setting">설정</string>
    <string name="messageBox">메시지함</string>
    <string name="leave_pion"><u>회원탈퇴</u></string>
    <string name="manager_invite">매니저 초대하기</string>
    <string name="menu_customer_invite">고객 초대하기</string>
    <string name="menu_mypage">마이페이지</string>
    <string name="pml_card_top">The PION Manager No.</string>
    <string name="pml_card_middle">111-222-5555</string>
    <string name="pml_card_bottom">Date : 2020-02-01</string>
    <string name="camera_permission_1">[설정] > [권한]에서 권한을 허용할 수 있습니다.</string>
    <string name="camera_permission_2">신분증 확인을 위하여 사진 및 파일에 접근 권한이 필요합니다.</string>
    <string name="camera_capture">촬영</string>
    <string name="camera_crop">사각형안에 신분증이 모두 보이도록 촬영해주세요</string>
    <string name="progress">데이터 처리중</string>
    <string name="thepion_commision">The PION 수수료</string>
    <string name="commision">수당</string>
    <string name="commision_for_manager">매니저 수당 조견표</string>
    <string name="commision_for_biz_manager">비즈매니저 수당 조견표</string>
    <string name="commision_for_biz_partner">비즈파트너 수당 조견표</string>
    <string name="what_is_manager">더파이온 매니저란?</string>
    <string name="commission_manwon">수당</string>
    <string name="find_idAndPassword" formatted="true">ID/PW 찾기</string>
    <string name="biz_partner_explanation" formatted="false">* 아파트 후순위(A2) 비즈파트너 지급수당 계산\n\n• 이번달 biz멤버(비즈파트너 소속 매니저) 10명\n• 이번달 biz멤버 총 대출 완료금액 10,000,000,000원\n   (비즈파트너 대표 대출금액
        포함)\n\n① 대출 완료금액 : 10,000,000,000원\n② 비즈파트너 수당 : ① x 1.5% = 150,000,000원\n③ 구간수당 : ① x 0.3% = 30,000,000원 \n④ 플랫폼수수료 : ① x 0.01% =1,000,000 원\n \n ※ 실 지급수당 : (② + ③) - ④ =
        179,000,000 원</string>
    <string name="commision_explanation" formatted="false">* 아파트 후순위(A2) 매니저 지급수당 계산\n\n① 대출 완료금액 : 100,000,000 원\n② 매니저 수당 : ① x 1.3% = 1,300,000 원\n③ 플랫폼수수료 : ① x 0.01% =
        10,000 원\n \n ※ 실 지급수당 : ② - ③ = 1,290,000 원</string>
    <string name="biz_commision_explanation" formatted="false">* 아파트 후순위(A2) 매니저 지급수당 계산\n\n① 대출 완료금액 : 100,000,000 원\n② 매니저 수당 : ① x 1.4% = 1,400,000 원\n③ 플랫폼수수료 : ① x 0.01% =
        10,000 원\n \n ※ 실 지급수당 : ② - ③ = 1,390,000 원</string>
    <string name="biz_pay" formatted="false">* 아파트 후순위(A2) 비즈수당 지급 계산\n\n•이번달 비즈멤버 10명\n•이번달 비즈멤버 총 대출 완료금액 1,000,000,000원 \n\n① 대출 완료금액 : 1,000,000,000원\n② 비즈수당 : ① x 0.2% =
        2,000,000원\n③ 플랫폼수수료 : ① x 0.01% =100,000 원\n \n ※ 실 지급수당 : ② - ③ = 1,900,000 원</string>
    <string name="biz_partner_extra_pay" formatted="false">• 20억 이상 ~ 50억 미만 = +0.1%\n• 50억 이상 ~ 100억 미만 = +0.2%\n• 100억 이상 ~ 200억 미만 = +0.3%\n• 200억 이상 = +0.4%</string>
    <string name="team_leader_payment">팀장 수당</string>
    <string name="team_leader_payment_explanation" formatted="false">ex) 팀원 전체 합산 대출금액 35억원의 경우\n\n① 팀장 직급 수당 : 35억 x 0.2% = 7,000,000 원\n② 플랫폼 수수료 : 7,000,000(①) x 0.6%
        = 42,000원\n\n ※ 실 지급수당 : ① - ② = 6,958,000원</string>
    <string name="how_to_be_team_leader">매니저 팀장이 되려면?</string>
    <string name="how_to_be_team_leader_explanation">10명 이상의 팀원(매니저)이 있어야 합니다.\n팀원(매니저) 추가는 등록할 팀원이 매니저로 회원가입 할 때 추천 매니저 번호에 나의 매니저 번호를 입력하면 됩니다.</string>
    <string name="manager_commission_explanation_1">매니저 수당은 매월 1일부터 말일까지 대출완료건에 한하여 익월 15일에 일괄 지급됩니다.</string>
    <string name="manager_commission_explanation_2">매니저 수당은 당사가 지급하는 수수료로 금융 소비자가 부담하는 수수료가 아닙니다.</string>
    <string name="manager_commission_explanation_3">매니저 수당은 당사의 규정 및 국가정책에 따라 변동될 수 있습니다.</string>
    <string name="biz_partner_explanation_1">비즈파트너 수당은 1일부터 말일까지 대출완료된 건에 한하여 더파이온과 당사가 규정하는 익월 일자에 일괄 지급됩니다.</string>
    <string name="biz_partner_explanation_2">구간수당의 구간 결정은 아파트/주상복합(A) 대출금액의 합산으로 이루어지며, 구간수당의 적용은 아파트/주상복합(A)에만 적용됩니다.</string>
    <string name="biz_partner_explanation_3">비즈파트너 수당은 당사의 규정 및 국가정책에 따라 변동될 수 있습니다.</string>
    <string name="biz_partner_explanation_4">구간수당의 금액은 매월 1일부터 말일까지의 대출금액 합산으로 계산합니다.</string>
    <string name="biz_commission_explanation_0">비즈멤버란 비즈매니저를 추천인으로 등록한 매니저입니다.</string>
    <string name="biz_commission_explanation_1">비즈매니저 수당은 매월 1일부터 말일까지 비즈멤버들의 대출완료건에 한하여 익월 15일에 일괄 지급됩니다.</string>
    <string name="biz_commission_explanation_2">비즈매니저 수당은 당사가 지급하는 수수료로 금융 소비자가 부담하는 수수료가 아닙니다.</string>
    <string name="biz_commission_explanation_3">비즈매니저 수당은 당사의 규정 및 국가정책에 따라 변동될 수 있습니다.</string>
    <string name="finish">완료</string>
    <string name="ok">확인</string>
    <string name="request_manager_num">라이선스 발급 신청이 완료되었습니다.</string>
    <string name="request_manager_num_3">라이선스 발급은 24시간 이내에 완료됩니다.</string>
    <string name="manager_registration">더파이온 매니저로 활동하기 위해서는\n매니저 라이선스를 발급 받아야 합니다.</string>
    <string name="manager_address_detail">상세주소를 입력해주세요</string>
    <string name="A">아파트/주상복합(A)</string>
    <string name="B">아파트/주상복합 외(B)</string>
    <string name="A1">선순위(1)</string>
    <string name="A2">후순위(2)</string>
    <string name="teamMemberCircle">•</string>
</resources>