<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tvTopManagerPay"
            style="@style/font_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="매니저 수당"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="5dp"
            android:paddingVertical="10dp"
            android:background="@drawable/text_line_black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTopManagerPay">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_big"
                android:paddingBottom="5dp"
                android:weightSum="8">

                <TextView
                    style="@style/font_big"
                    android:layout_width="0dp"
                    android:textColor="@color/pion_basic_soft_blue"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="@string/A" />

                <TextView
                    style="@style/font_big"
                    android:textColor="@color/btn_big_orange"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="@string/B" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_big"
                android:paddingVertical="5dp"
                android:weightSum="8">

                <TextView
                    style="@style/font_default"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/A2" />

                <TextView
                    style="@style/font_default"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/A1" />

                <TextView
                    style="@style/font_default"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/A2" />

                <TextView
                    style="@style/font_default"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/A1" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_big"
                android:paddingVertical="5dp"
                android:weightSum="8">

                <TextView
                    android:id="@+id/tvA2"
                    style="@style/font_default"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="1.3%" />

                <TextView
                    android:id="@+id/tvA1"
                    style="@style/font_default"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="0.8%" />

                <TextView
                    android:id="@+id/tvB2"
                    style="@style/font_default"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="0.7%" />

                <TextView
                    android:id="@+id/tvB1"
                    style="@style/font_default"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="0.4%" />

            </TableRow>


        </TableLayout>


        <ImageView
            android:id="@+id/dash_center_1"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:elevation="100dp"
            android:src="@drawable/dash_line_blue"
            app:layout_constraintTop_toBottomOf="@+id/table" />

        <LinearLayout
            android:id="@+id/payExample"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/dash_center_1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ex"
                android:layout_marginLeft="10dp"
                android:textColor="@color/pion_basic_soft_blue"
                style="@style/font_title_x"/>

            <TextView
                android:id="@+id/tvTopExplain"
                style="@style/font_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:breakStrategy="balanced"
                android:bufferType="spannable"
                android:lineSpacingExtra="5dp"
                android:gravity="center|left"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:text="@string/commision_explanation" />

        </LinearLayout>


        <ImageView
            android:id="@+id/dash_center_2"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:elevation="100dp"
            android:src="@drawable/dash_line_blue"
            app:layout_constraintTop_toBottomOf="@+id/payExample" />

        <LinearLayout
            android:id="@+id/payExplain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/dash_center_2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/teamMemberCircle" />

                <TextView
                    style="@style/font_default"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="97"
                    android:breakStrategy="balanced"
                    android:lineSpacingExtra="5dp"
                    android:inputType="textMultiLine"
                    android:text="@string/manager_commission_explanation_1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/teamMemberCircle" />

                <TextView
                    style="@style/font_default"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="97"
                    android:breakStrategy="balanced"
                    android:lineSpacingExtra="5dp"
                    android:inputType="textMultiLine"
                    android:text="@string/manager_commission_explanation_2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/teamMemberCircle" />

                <TextView
                    style="@style/font_default"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="97"
                    android:lineSpacingExtra="5dp"
                    android:breakStrategy="balanced"
                    android:inputType="textMultiLine"
                    android:text="@string/manager_commission_explanation_3" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/PlusManagerPay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:paddingBottom="20dp"
            app:layout_constraintTop_toBottomOf="@+id/payExplain"
            tools:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"

                android:text="+0.1%"
                android:textColor="@color/pion_basic_soft_blue"
                android:textSize="50dp" />

            <TextView
                android:id="@+id/payUp"
                style="@style/font_title_x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:breakStrategy="balanced"
                android:clickable="false"
                android:inputType="textMultiLine"
                android:bufferType="spannable"
                android:lineSpacingExtra="7dp"
                android:paddingHorizontal="10dp"
                android:text="@string/regBizManager"
                android:textAlignment="center"
                android:textColor="@color/basic_gray"
                tools:ignore="TextViewEdits" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>